Fix action bar hover text color in dark mode

--- a/src/sass/partials/_actionbar.scss
+++ b/src/sass/partials/_actionbar.scss
@@ -168,7 +168,14 @@
     border-top: 1px solid transparent;
   }
   #actionbar a {
+    
     color: #0078e7;
+
+    &:hover,
+    &:focus {
+      color: $white;
+    }
+
   }
 }
 
